fix: Axe some insecure content warnings.

--- a/web/content/posts/2005-09-05-mint-mentos.mdx
+++ b/web/content/posts/2005-09-05-mint-mentos.mdx
@@ -3,7 +3,7 @@ title: "Mint > Mentos"
 date: 2005-09-05T14:30:00Z
 ---
 
-[<img src="http://static.flickr.com/33/40622160_5f5d08a13b.jpg" width="330" height="527" class="posted" alt="Mint-y Freshness" />][1]
+[<img src="https://static.flickr.com/33/40622160_5f5d08a13b.jpg" width="330" height="527" class="posted" alt="Mint-y Freshness" />][1]
 
 Now come on, how could something this cool be released without me talking about it. \*slap\*
 
