--- a/web/content/posts/2005-09-15-ripping-apart-linkedin.mdx
+++ b/web/content/posts/2005-09-15-ripping-apart-linkedin.mdx
@@ -13,15 +13,15 @@ Now since LinkedIn was a little slow in taking me away from Facebook, that proba
 
 This first one did the actual "ripping apart." Actually, I did have the most fun with this.
 
-[<img src="http://static.flickr.com/26/43405931_ab05f00c97_o.png" width="690" height="826" alt="Ripping Apart LinkedIn's Homepage" />][3]
+[<img src="https://static.flickr.com/26/43405931_ab05f00c97_o.png" width="690" height="826" alt="Ripping Apart LinkedIn's Homepage" />][3]
 
 Next is where I did the actual work. That "Quick Search" would have been done in Ay-yax. What a trendy thing to do!
 
-[<img src="http://static.flickr.com/33/43405893_2059e4aacc_o.png" width="690" height="863" alt="My LinkedIn Rendition" />][4]
+[<img src="https://static.flickr.com/33/43405893_2059e4aacc_o.png" width="690" height="863" alt="My LinkedIn Rendition" />][4]
 
 This last one focused on one of the few parts I felt needed the most work, the job listings. There are parts of this I wish they incorporated in the new design, but alas, that would be stealing my ideas. Eh?
 
-[<img src="http://static.flickr.com/29/43405903_a941cc6205_b.jpg" width="690" height="345" alt="My LinkedIn Job Listing" />][5]
+[<img src="https://static.flickr.com/29/43405903_a941cc6205_b.jpg" width="690" height="345" alt="My LinkedIn Job Listing" />][5]
 
 All in all, with the time I took on it, I think I did a pretty decent job. If I were to take more time with it, it could have been a lot more polished. (Remember guys, it was only an interview requirement.) But it makes you wonder what I could have done for them in the long run. Well, at least it makes me wonder. So now that I've showed you what I could have done for them, I'll be waiting for those comments ripping my designs apart. Come on, you know you want to.
 
