--- a/web/content/posts/2005-09-26-a-place-we-call-home.mdx
+++ b/web/content/posts/2005-09-26-a-place-we-call-home.mdx
@@ -19,7 +19,7 @@ After using [Backpack][5] to post our findings for about 30 apartments in the Si
 
 Here are some pictures for your optical pleasure:
 
-[<img src="http://static.flickr.com/28/41520065_8a1e5f9f0c_s.jpg" />][7] [<img src="http://static.flickr.com/30/41515652_dc5ea04ae1_s.jpg" />][8] [<img src="http://static.flickr.com/22/41509288_de03b8edb1_s.jpg" />][9] [<img src="http://static.flickr.com/29/41509271_647a472972_s.jpg" />][10]
+[<img src="https://static.flickr.com/28/41520065_8a1e5f9f0c_s.jpg" />][7] [<img src="https://static.flickr.com/30/41515652_dc5ea04ae1_s.jpg" />][8] [<img src="https://static.flickr.com/22/41509288_de03b8edb1_s.jpg" />][9] [<img src="https://static.flickr.com/29/41509271_647a472972_s.jpg" />][10]
 
 ## The Felines
 
