--- a/web/content/posts/2005-09-28-winners-of-the-birthday-bash.mdx
+++ b/web/content/posts/2005-09-28-winners-of-the-birthday-bash.mdx
@@ -9,19 +9,19 @@ Okay, I'll stop talking, let's get it on!
 
 ## Third Place: [Mike Ly][1]
 
-[<img src="http://farm1.static.flickr.com/26/47644350_728528f5c9_m.jpg" width="240" height="239" alt="Mike Ly's Entry" />][2]
+[<img src="https://farm1.static.flickr.com/26/47644350_728528f5c9_m.jpg" width="240" height="239" alt="Mike Ly's Entry" />][2]
 
 Needless to say, I asked Jen her opinion on our ride back from Southern California, and she went "wow" when she saw this one. It was one of Mike's later entries after about 4 tries. Funny how the one that seemed to be rushed was the one I liked the best. Now there are some modifications that I personally would like to make, but if Mike has a problem, it'll go as is.
 
 ## Second Place: [Phu Ly][3]
 
-[<img src="http://farm1.static.flickr.com/25/47644375_1880862fa7_m.jpg" width="240" height="218" alt="Phu Ly's Entry" />][4]
+[<img src="https://farm1.static.flickr.com/25/47644375_1880862fa7_m.jpg" width="240" height="218" alt="Phu Ly's Entry" />][4]
 
 Shouldn't this be something for Veer? I guess not, but I'm glad it was an entry. Phu took a turn that nobody else did and used all text. The font I was never too crazy about, but hopefully we can work on it a little more before it's printed. I love the fact that this design can be printed on different color shirts, and it's not as blatant as the others - which sometimes is a good thing.
 
 ## First Place: [Kyle Jones][5]
 
-[<img src="http://farm1.static.flickr.com/27/47644362_13b4387357_m.jpg" width="240" height="240" alt="Kyle Jones' Entry" />][6]
+[<img src="https://farm1.static.flickr.com/27/47644362_13b4387357_m.jpg" width="240" height="240" alt="Kyle Jones' Entry" />][6]
 
 The first thing I thought when I saw this one was, "Damn, now I'd wear THAT." And after that, there was no turning back. Kyle did an awesome... awesome job at making a shirt that was simple (almost), wearable and damn sexy. The fact that it was portable to other colors was a very appealing feature as well.
 
