--- a/web/content/posts/2005-10-13-facebooks-print-look.mdx
+++ b/web/content/posts/2005-10-13-facebooks-print-look.mdx
@@ -9,6 +9,6 @@ My newest endeavor encompassed Facebook. I had sat in on a few meetings with a f
 
 Hopefully from here, we can get the rest of our stationary out.
 
-[<img src="http://farm1.static.flickr.com/26/52276678_dce587c34f.jpg" width="710" height="710" alt="Facebook's New Business Cards (View I)" />][1]
+[<img src="https://farm1.static.flickr.com/26/52276678_dce587c34f.jpg" width="710" height="710" alt="Facebook's New Business Cards (View I)" />][1]
 
 [1]: http://www.flickr.com/photos/avalonstar/52276678/
