--- a/web/content/posts/2005-11-16-my-buddy-list-is-sacred.mdx
+++ b/web/content/posts/2005-11-16-my-buddy-list-is-sacred.mdx
@@ -3,7 +3,7 @@ title: "My Buddy List is Sacred"
 date: 2005-11-16T09:30:00Z
 ---
 
-[<img src="http://static.flickr.com/33/63979669_c3caf11f19_o.png" width="410" height="240" alt="AIM Hijacks My Buddy List" />][1]
+[<img src="https://static.flickr.com/33/63979669_c3caf11f19_o.png" width="410" height="240" alt="AIM Hijacks My Buddy List" />][1]
 
 Dear AOL,
 
