--- a/web/content/posts/2005-11-22-the-xbox-360-best-buy-fiasco.mdx
+++ b/web/content/posts/2005-11-22-the-xbox-360-best-buy-fiasco.mdx
@@ -11,13 +11,13 @@ Just got to Best Buy, looks like 30 people beat us here, which isn't that bad co
 
 Wow, one hour. Well, we have had about 10 more people stroll in, some for the games, some for the thrill and others for the money. About 20 minutes ago, I met one of the senior developers of the ATI Xbox GPU. Looks like Microsoft and their partners like to have their workers do one thing and then completely cut them out of the loop. Anyway, I don't feel so bad getting one for selling purposes since there's a non-gamer next to us waiting just so he can sell one in the morning. I should start typing the auction details now. Eh, I think I'll live. Don't know when I'll actually sleep, but it doesn't look like anytime soon.
 
-[<img src="http://static.flickr.com/33/65926989_68d0d5bf69_m.jpg" width="240" height="180" alt="Xbox 360 GPU" />][1] [<img src="http://static.flickr.com/25/65926711_67cee5e0d0_m.jpg" width="240" height="180" alt="Xbox 360 GPU (Back)" />][2]
+[<img src="https://static.flickr.com/33/65926989_68d0d5bf69_m.jpg" width="240" height="180" alt="Xbox 360 GPU" />][1] [<img src="https://static.flickr.com/25/65926711_67cee5e0d0_m.jpg" width="240" height="180" alt="Xbox 360 GPU (Back)" />][2]
 
 **Time: 12:22 PM**
 
 Well, we were just told that we have to buy the bundle packs. Either that, or sign a sheet that will "pre-order" you a system from the 2nd shipment without the bundle purchase requirement. Doesn't look like I'm leaving anytime soon, but I'll be dishing out $750 for two bundles which include the Pro system, a wireless controller, play & charge kit, three games of my choice (each with a product replacement plan), 12 months of Xbox Live, and a 2 year product replacement plan for the system itself. Oh well, might as well.
 
-[<img src="http://static.flickr.com/32/65927265_2b1f42557e_m.jpg" width="240" height="180" alt="Pro Bundle #1" />][3] [<img src="http://static.flickr.com/28/65927539_ddee7cb505_m.jpg" width="240" height="180" alt="Pro Bundle #2" />][4]
+[<img src="https://static.flickr.com/32/65927265_2b1f42557e_m.jpg" width="240" height="180" alt="Pro Bundle #1" />][3] [<img src="https://static.flickr.com/28/65927539_ddee7cb505_m.jpg" width="240" height="180" alt="Pro Bundle #2" />][4]
 
 **Time: 5:08 AM**
 
@@ -27,7 +27,7 @@ Well, that was the worst sleep I have ever had. Makes you really appreciate the 
 
 Scratch that, make that about 25 new people.
 
-[<img src="http://static.flickr.com/31/65927724_f095e45ed2_m.jpg" width="240" height="180" alt="The Line" />][5]
+[<img src="https://static.flickr.com/31/65927724_f095e45ed2_m.jpg" width="240" height="180" alt="The Line" />][5]
 
 **Time: 5:30 AM**
 
@@ -45,13 +45,13 @@ Well, we were just briefed on the systems and the order of procession. They also
 
 They just let the first people in a little while ago, looks like each person gets their own salesperson to walk them through the process. Anyway, we had some people try to cut in line, but they were prompty booed off the stage. I'm glad that time is starting to speed up now.
 
-[<img src="http://static.flickr.com/32/65927881_d118d6d99e_m.jpg" width="180" height="240" alt="Line Starts Here" />][6] [<img src="http://static.flickr.com/25/65928113_7cae7a744e_m.jpg" width="240" height="180" alt="Madden 2006" />][7]
+[<img src="https://static.flickr.com/32/65927881_d118d6d99e_m.jpg" width="180" height="240" alt="Line Starts Here" />][6] [<img src="https://static.flickr.com/25/65928113_7cae7a744e_m.jpg" width="240" height="180" alt="Madden 2006" />][7]
 
 **Time: 9:17 AM**
 
 Mission accomplished. We've come out with two Xboxes, six games, a faceplate, and a few other items. The salespeople were surprisingly perky for being up so early. When we left, I overheard an employee say that they only had 9 Pro systems left, so only about 25 more, and there were at least 50 people outside waiting with more strolling in. So after 12 hours, $1600 and freezing weather, we made it.
 
-[<img src="http://static.flickr.com/30/65928393_33497b25d6_m.jpg" width="240" height="180" alt="The Unfortunates" />][8] [<img src="http://static.flickr.com/35/65928655_64c9693a77.jpg" width="240" height="180" alt="The Spoils" />][9]
+[<img src="https://static.flickr.com/30/65928393_33497b25d6_m.jpg" width="240" height="180" alt="The Unfortunates" />][8] [<img src="https://static.flickr.com/35/65928655_64c9693a77.jpg" width="240" height="180" alt="The Spoils" />][9]
 
 [1]: http://www.flickr.com/photos/avalonstar/65926989/
 [2]: http://www.flickr.com/photos/avalonstar/65926711/
