--- a/web/content/posts/2006-01-25-welcome-back-ddr.mdx
+++ b/web/content/posts/2006-01-25-welcome-back-ddr.mdx
@@ -9,7 +9,7 @@ Why don't I start a meme, post something that nobody knows about you (that's bee
 
 Okay folks, I'm beside myself. Five years and one month ago (almost to the day), I started playing a game that set the course of a lot of events in my life. From being the first connection between my fiance and I to being one of the first games I was ever good at, [Dance Dance Revolution][1] has been a gigantic part of my life. For those of you who have known me since I started, you'll know just *how* important this game is to me. Wow, just sitting here, I can think back to what my life was back then and how different it would have been if I never had touched the game. Okay, enough of being nostalgic. It's time to bring out the incriminating items. **Click on the photo to download the video that accompanies it.**
 
-[<img src="http://static.flickr.com/34/91269595_40e27571cf_m.jpg" width="257" height="239" alt="Bryan Dances" class="posted" />][2] [<img src="http://static.flickr.com/15/91269594_315812e804_o.png" width="240" height="239" alt="Bryan Dances Again" class="posted" />][3]
+[<img src="https://static.flickr.com/34/91269595_40e27571cf_m.jpg" width="257" height="239" alt="Bryan Dances" class="posted" />][2] [<img src="https://static.flickr.com/15/91269594_315812e804_o.png" width="240" height="239" alt="Bryan Dances Again" class="posted" />][3]
 
 Please consider my bravery when posting these. The videos above are about two to three **years** old and are from two different tournaments, one in Newport, Rhode Island and the other in San Bernardino, California. I believe the 2nd one is the newer of the two. No, I don't have that haircut anymore, and I actually had a good body structure back then. Anyway, if you're interested in knowing what the hell the above two videos are about - they're called "freestyle," which as you can see by the videos, it's more about style than the technical aspect. In no way am I saying that I'm a good dancer, I just happen to be pretty good at this (Out of 7 tournaments, I have only placed out of the top 3 once, and placed 1st the other six times.). Okay, moving away from this as quickly as possible.
 
