--- a/web/content/posts/2006-01-26-the-rotary-bit.mdx
+++ b/web/content/posts/2006-01-26-the-rotary-bit.mdx
@@ -18,7 +18,7 @@ But I'm sure I don't have to go through all of that in detail. To make a long st
 
 In the end, if you've been paying attention, you know what I've chosen. So without further ado, I'd like to introduce you to my 2005 Titanium Gray Mazda RX-8. The beauty is powered by 238 bhp and does naught to 60 in 5.2 seconds, but with my driving, that's more like 6 or 7 seconds. From the styling, to the engine, to the owners community - it's one of the most unique cars you can buy without spending a fortune for a supercar. I'm sure that many people will disagree, but it is all a matter of personal taste. Did I mention that it redlines at 9,500 RPMs? My personal taste happen to hovers around the phrase, "beauty without rice." No, I'm not talking about food, but if you've seen the bombshell pieces of shit - otherwise known as The Fast and the Furious - [then you'll know what I'm talking about][2]. But let's get off that sour note and onto something more positive.
 
-[<img src="http://static.flickr.com/34/69971401_1e433678ce_s.jpg" width="75" height="75" alt="The Dasboard" class="posted" />][3] [<img src="http://static.flickr.com/6/85498006_565762cfef_s.jpg" width="75" height="75" alt="Longshot" class="posted" />][4] [<img src="http://static.flickr.com/6/85498101_c0410e1a1e_s.jpg" width="75" height="75" alt="Steering Wheel" class="posted" />][5] [<img src="http://static.flickr.com/42/85497385_3ef9272203_s.jpg" width="75" height="75" alt="Footboard" class="posted" />][6] [<img src="http://static.flickr.com/34/69970833_339d11461e_s.jpg" width="75" height="75" alt="What You'll See" class="posted" />][7] [<img src="http://static.flickr.com/42/85497677_16b60fc159_s.jpg" width="75" height="75" alt="Front Portrait" class="posted" />][8]
+[<img src="https://static.flickr.com/34/69971401_1e433678ce_s.jpg" width="75" height="75" alt="The Dasboard" class="posted" />][3] [<img src="https://static.flickr.com/6/85498006_565762cfef_s.jpg" width="75" height="75" alt="Longshot" class="posted" />][4] [<img src="https://static.flickr.com/6/85498101_c0410e1a1e_s.jpg" width="75" height="75" alt="Steering Wheel" class="posted" />][5] [<img src="https://static.flickr.com/42/85497385_3ef9272203_s.jpg" width="75" height="75" alt="Footboard" class="posted" />][6] [<img src="https://static.flickr.com/34/69970833_339d11461e_s.jpg" width="75" height="75" alt="What You'll See" class="posted" />][7] [<img src="https://static.flickr.com/42/85497677_16b60fc159_s.jpg" width="75" height="75" alt="Front Portrait" class="posted" />][8]
 
 Ahhh, that's better. So the rotary bit, why start talking about this all of a sudden? As you know, Avalonstar is an extension of myself, and if you read my post [explaining the purpose of the Aries Project][9], then you'll know that there are a lot of parts of me that people don't realize exist. My love for the automobile is one of those parts. During my many trips around our blogosphere, I never really found a non-professional auto blog or a site that just talks about the joys and trials of being a car owner. For me, it'd be a great experience to share, since this is truly my first all-out ownership experience. In that I mean - I pay for this car, I pay for the insurance and everything that goes into it. Like the old saying goes, "when it's your money, you care about it a whole lot more." This is very true in this case, the fact that I happen to be spending my money on something I've always wanted is the bonus. You know the feeling you get after a rush? Yeah, it's like that. No, this isn't a Sierra Mist advertisement.
 
