--- a/web/content/posts/2006-02-06-tigers-and-twenty-birthday-wishes.mdx
+++ b/web/content/posts/2006-02-06-tigers-and-twenty-birthday-wishes.mdx
@@ -3,7 +3,7 @@ title: "Tigers and Twenty Birthday Wishes"
 date: 2006-02-06T21:15:00Z
 ---
 
-[<img src="http://static.flickr.com/19/96549070_f83e2b2dbf_m.jpg" width="240" height="160" class="posted" alt="Her Greatest Love" />][1]
+[<img src="https://static.flickr.com/19/96549070_f83e2b2dbf_m.jpg" width="240" height="160" class="posted" alt="Her Greatest Love" />][1]
 
 This one comes a day late, but I don't want to say it was because of a Photoshop tutorial. But then I'd be lying.
 
@@ -13,7 +13,7 @@ So over the past weekend, Jenni and I traveled to [Minneapolis, Minnesota][2] to
 
 We took about 300 pictures while we were there, and to share our memories with all of you, I've decided to post a few of my favorites. They're not just of tigers, but of all of the zoo's animals. We did spend about 50% of our time with the tigers and Mexican wolves, but we made sure that we saw everything while we were there. Unfortunately since it was the winter season, there was a lot that we couldn't see due to temperatures and snow. However, that means that we can plan a second trip sometime in the future. In the meantime, [enjoy the photos][6] and feel free to comment about some of your favorite moments with your significant others (past or present).
 
-[<img src="http://static.flickr.com/32/96555686_1bad5fc3cb_t.jpg" width="100" height="67" class="posted" alt="I'll Get It!" />][7] [<img src="http://static.flickr.com/12/96555305_ab2c172fc5_t.jpg" width="100" height="67" class="posted" alt="Happily Camoflauged" />][8] [<img src="http://static.flickr.com/40/96554770_f0148eafdc_t.jpg" width="100" height="67" class="posted" alt="Alone in the Snow" />][9] [<img src="http://static.flickr.com/29/96552467_12beb3eecd_t.jpg" width="100" height="67" class="posted" alt="Pissed Off?" />][10] [<img src="http://static.flickr.com/31/96553013_cd47ef71c8_t.jpg" width="100" height="67" class="posted" alt="Sleeping Like a Human" />][11] [<img src="http://static.flickr.com/31/96552032_675b8b54f1_t.jpg" width="100" height="67" class="posted" alt="I Got a Ball!" />][12] [<img src="http://static.flickr.com/29/96545353_675365aaca_t.jpg" width="100" height="67" class="posted" alt="Big Yawn" />][13] [<img src="http://static.flickr.com/39/96544117_91d42f429f_t.jpg" width="100" height="67" class="posted" alt="Saying Hello" />][14] [<img src="http://static.flickr.com/24/96542071_3ed8be1ccc_t.jpg" width="100" height="67" class="posted" alt="Firefox Forever!" />][15] [<img src="http://static.flickr.com/26/96541155_e8766ea760_t.jpg" width="100" height="67" class="posted" alt="Tiger Tackle" />][16]
+[<img src="https://static.flickr.com/32/96555686_1bad5fc3cb_t.jpg" width="100" height="67" class="posted" alt="I'll Get It!" />][7] [<img src="https://static.flickr.com/12/96555305_ab2c172fc5_t.jpg" width="100" height="67" class="posted" alt="Happily Camoflauged" />][8] [<img src="https://static.flickr.com/40/96554770_f0148eafdc_t.jpg" width="100" height="67" class="posted" alt="Alone in the Snow" />][9] [<img src="https://static.flickr.com/29/96552467_12beb3eecd_t.jpg" width="100" height="67" class="posted" alt="Pissed Off?" />][10] [<img src="https://static.flickr.com/31/96553013_cd47ef71c8_t.jpg" width="100" height="67" class="posted" alt="Sleeping Like a Human" />][11] [<img src="https://static.flickr.com/31/96552032_675b8b54f1_t.jpg" width="100" height="67" class="posted" alt="I Got a Ball!" />][12] [<img src="https://static.flickr.com/29/96545353_675365aaca_t.jpg" width="100" height="67" class="posted" alt="Big Yawn" />][13] [<img src="https://static.flickr.com/39/96544117_91d42f429f_t.jpg" width="100" height="67" class="posted" alt="Saying Hello" />][14] [<img src="https://static.flickr.com/24/96542071_3ed8be1ccc_t.jpg" width="100" height="67" class="posted" alt="Firefox Forever!" />][15] [<img src="https://static.flickr.com/26/96541155_e8766ea760_t.jpg" width="100" height="67" class="posted" alt="Tiger Tackle" />][16]
 
 Oh yeah, next year we'll be going to Las Vegas. I don't think I have to say anything more.
 
