--- a/web/content/posts/2006-02-15-css-for-kittens.mdx
+++ b/web/content/posts/2006-02-15-css-for-kittens.mdx
@@ -3,7 +3,7 @@ title: "CSS for Kittens"
 date: 2006-02-15T19:45:00Z
 ---
 
-[<img src="http://static.flickr.com/32/100230432_38f2166be6_m.jpg" alt="CSS For Kittens" />][1]
+[<img src="https://static.flickr.com/32/100230432_38f2166be6_m.jpg" alt="CSS For Kittens" />][1]
 
 So remember that book I'd never write? Looks like we were all wrong, even me. I was wrong. I wrote a book! So let me give you the synopsis (and background story) of the new book by Bryan Veloso, "CSS by Kittens".
 
