--- a/web/content/posts/2006-05-29-fashionable-mail-icons.mdx
+++ b/web/content/posts/2006-05-29-fashionable-mail-icons.mdx
@@ -53,7 +53,7 @@ Rinse and repeat. Repeat steps 3 and 4 using **16px** as the export size and rep
 
 It's time to bask in the delight of changed icons. If everything went well, all the Aqua icons should be gone, even the ones in the Preferences pane. My results are below. Remember, that all programs function in this way, so if you're really itching to get some icons out of your favorite program, then use the same steps! Remember though, if the program you're dealing with doesn't resize icons like Mail, [CandyBar][3] will save you a hell of a lot of work.
 
-[<img src="http://static.flickr.com/53/155439443_04e080d61a_o.png" width="179" height="349" alt="New Mail Icons" />][6]
+[<img src="https://static.flickr.com/53/155439443_04e080d61a_o.png" width="179" height="349" alt="New Mail Icons" />][6]
 
 [1]: http://www.rad-e8.com/
 [2]: http://www.rad-e8.com/downloads/icn/minium/
