--- a/web/content/posts/2006-06-13-flock-gets-a-makeover.mdx
+++ b/web/content/posts/2006-06-13-flock-gets-a-makeover.mdx
@@ -7,7 +7,7 @@ Since Friday, June 2nd, I've been working on an awesome project with the great t
 
 So without further ado, I present to you Flock's new website, the first major project to come out of my new company.
 
-[<img src="http://static.flickr.com/46/166764603_cc5115d25d.jpg" width="500" height="486" alt="Presenting the new Flock" />][9]
+[<img src="https://static.flickr.com/46/166764603_cc5115d25d.jpg" width="500" height="486" alt="Presenting the new Flock" />][9]
 
 ### Cannibalism
 This was the theme of this design, at least in my mind. My personal problem with the previous iteration of the design was the fact that it didn't utilize many of Flock's defining features - the browser itself, the light shades of blue and especially their famous star. So I started with a clean canvas and started with a few swatches of blue pulled from the logo. A lot of my inspiration for the coloring came from Flock's original website, created by [Chris Messina][4]. I also loved the simplicity of that site, but as usual wanted to add my own personal touch to it. The first iteration did have some great concepts, such as the rounded navigation and half-height headers for the inside pages. But that still left the homepage. As you can see, there's not much text there, so we needed to communicate what Flock was via Bart's "5-second-rule". What better way to do that then to display the browser itself? So that's what I did.
