--- a/web/content/posts/2006-06-17-10000-miles.mdx
+++ b/web/content/posts/2006-06-17-10000-miles.mdx
@@ -5,7 +5,7 @@ date: 2006-06-17T22:00:00Z
 
 Seems like a bunch of things are happening on the same day. :)
 
-[<img src="http://static.flickr.com/76/169434480_9284e5dce7_m.jpg" width="240" height="180" alt="10,000" />]
+[<img src="https://static.flickr.com/76/169434480_9284e5dce7_m.jpg" width="240" height="180" alt="10,000" />]
 
 At about 6:35 PM in Beaumont, CA, I hit my 10,000th mile with the RX-8. Given that I bought the car on the 25th of November, it's been 175 days (almost to the minute!). Time for the stats!
 
