--- a/web/content/posts/2006-06-17-logos-of-times-gone-by.mdx
+++ b/web/content/posts/2006-06-17-logos-of-times-gone-by.mdx
@@ -7,7 +7,7 @@ Archive.org did something right for once. It kept images of logos I did from Ver
 
 At any rate, here's an image of all the logos I did (that didn't fall victim to the fatal hard drive crash of 2003). Granted, I did these 4-6 years ago, so they're not the best. ;) But I do still love a bunch of them.
 
-[<img src="http://static.flickr.com/52/167501813_0bc8b1b9b9.jpg" width="353" height="500" alt="Logos of my Past" />][1]
+[<img src="https://static.flickr.com/52/167501813_0bc8b1b9b9.jpg" width="353" height="500" alt="Logos of my Past" />][1]
 
 From left-to-right in a zig-zag shape:
 
