--- a/web/content/posts/2006-07-01-revyver.mdx
+++ b/web/content/posts/2006-07-01-revyver.mdx
@@ -5,11 +5,11 @@ date: 2006-07-01T08:45:00Z
 
 About a month ago, after the Facebook fiasco, I said that I had a few things up my sleeve. Well, this is one of them. Actually, it was the only thing I managed to finish by my self-imposed July 1st deadline. So, [Revyver][1] (re&bull;vy&bull;ver) is the name of my new company &#8212; but it's not _just_ a design company, nor will it be _just_ a design company.
 
-[<img src="http://static.flickr.com/75/179233156_276c10aeff_m.jpg" width="240" height="240" alt="The Revyver Logo" />][2]
+[<img src="https://static.flickr.com/75/179233156_276c10aeff_m.jpg" width="240" height="240" alt="The Revyver Logo" />][2]
 
 Revyver stands for many things as it is derived from the word "revive". The revival of my entrepreneurial spirit (caused by the events of late) and the will to revive things that have been lost in time. Also, I'm a sucker for palindromes (try spelling _revyver_ backwards). I have to thank [Anton Peck][3] for the awesome job he did on Revyver's logo, in such short of a time as well. The site itself? Well, it's definitely a style that one wouldn't normally attribute with me, but I did want to show that I do have the capacity to jump like this. I kept it one page because I really don't have enough content yet to be honest.
 
-[<img src="http://static.flickr.com/55/179187596_fce8bd9518.jpg" width="339" height="500" alt="Revyver" />][4]
+[<img src="https://static.flickr.com/55/179187596_fce8bd9518.jpg" width="339" height="500" alt="Revyver" />][4]
 
 So now the flood gates have opened, I just have to decide if I need another week to finish the **other** projects that are up my sleeve. I would have loved to have them all out for you today, but I'm happy that I was able to finish this one first.
 
