--- a/web/content/posts/2006-07-02-the-manila-folder-reminder-system.mdx
+++ b/web/content/posts/2006-07-02-the-manila-folder-reminder-system.mdx
@@ -7,7 +7,7 @@ I take every life change as sort of an opportunity to start fresh, and thankfull
 
 Obviously, my organization skills needed work and thus would be the target of my developing obsessive-compulsiveness. I mean, now that I sat in my house chair all day doing work, there would be no excuses for me *not* being able to get things done on time. So, I started to use iCal more, took more notes, things of that nature. However, out of all the organizational changes I made to improve my organization, the addition of a simple manila (or blue in my case) folder was my biggest success.
 
-[<img src="http://static.flickr.com/55/180534545_af67755b21.jpg" width="500" height="333" alt="The Secret of Organizational Success" />][1]
+[<img src="https://static.flickr.com/55/180534545_af67755b21.jpg" width="500" height="333" alt="The Secret of Organizational Success" />][1]
 
 Oh, I can start hearing the "wtf?!" being thrown around. Well, let me explain.
 
