--- a/web/content/posts/2006-07-08-a-new-101.mdx
+++ b/web/content/posts/2006-07-08-a-new-101.mdx
@@ -5,7 +5,7 @@ date: 2006-07-08T11:30:00Z
 
 <del>About a month ago, after the Facebook fiasco, I said that I had a few things up my sleeve.</del> Wait, I already said that. Well, I do have another site up my sleeve and I guess releasing something new every Saturday wouldn't be a bad way to go. However, this week I have two things for you, a [new episode of Live From the 101][1], and a new website for [Live from the 101][2] (livefromthe101.com or lft101.com - if you like short names).
 
-[<img src="http://static.flickr.com/78/185007494_21cef652fd.jpg" width="235" height="500" alt="Live From the 101" />][3]
+[<img src="https://static.flickr.com/78/185007494_21cef652fd.jpg" width="235" height="500" alt="Live From the 101" />][3]
 
 Reason? Well, as you know, the 101 is no longer my own creation, but <a href="http://superfluousbanter.com" rel="friend met colleague">Dan's</a> as well. As for the feeds, they've stayed the same. So what are you waiting for?
 
