--- a/web/content/posts/2006-09-14-design-is.mdx
+++ b/web/content/posts/2006-09-14-design-is.mdx
@@ -5,9 +5,9 @@ date: 2006-09-14T10:00:00Z
 
 I'm such a sucker for these things. I wake up this morning to go get food for the cats, I come back and I see one of the funnest opportunities to make fun of myself in a long time. :) I'm probably one of the late comers to this meme, but hell, it was fun to do anyway. But you all win in the end right? Because all of you get the cool wallpapers made by everybody taking part in this. [Many thanks to Sir Hicks himself.][1]
 
-[<img src="http://static.flickr.com/82/243331002_c31b807ded.jpg" width="500" height="313" alt="Logos that make no sense." />][2]
+[<img src="https://static.flickr.com/82/243331002_c31b807ded.jpg" width="500" height="313" alt="Logos that make no sense." />][2]
 
-[<img src="http://static.flickr.com/87/243330999_fa634c232b.jpg" width="500" height="313" alt="Using the swatches palette." />][3]
+[<img src="https://static.flickr.com/87/243330999_fa634c232b.jpg" width="500" height="313" alt="Using the swatches palette." />][3]
 
 Here are some more to look through. ;)
 
