--- a/web/content/posts/2006-09-28-avalonstars-6th-birthday.mdx
+++ b/web/content/posts/2006-09-28-avalonstars-6th-birthday.mdx
@@ -5,7 +5,7 @@ date: 2006-09-28T09:00:00Z
 
 Today marks 6 years of Avalonstar. (Well, rather, 6 years since I bought the domain name.)
 
-[<img src="http://static.flickr.com/103/255755842_0e8fe94914.jpg" width="500" height="333" alt="Birthday Cake" />][1]
+[<img src="https://static.flickr.com/103/255755842_0e8fe94914.jpg" width="500" height="333" alt="Birthday Cake" />][1]
 
 It's hard to try and sum up running this place for that long, mainly because I'd probably forget a lot of important bits. To see a website rather, a life project of mine reach this mark (even though I prefer things in multiples of 5) is unreal. This one happens to be special because of everything that lead up to it. So many things in my life have changed because of Avalonstar and this place means more to me than it ever has in the past. The last 12 months in particular contained things like, SXSW, WebVisions, the t-shirts and Automattic. Not one of those things would have happened if I never took Avalonstar to where it sits at this very moment.
 
