--- a/web/content/posts/2006-10-04-design-protection.mdx
+++ b/web/content/posts/2006-10-04-design-protection.mdx
@@ -17,7 +17,7 @@ We'll start with this quote, which seems to be a confession that this person tri
 
 Now, we already know he said that he made the comments look like mine, but something else got me when I took a look at this theme. Take a look at "Recent Posts":
 
-[<img src="http://static.flickr.com/88/260955401_0ed91d1bd7.jpg" width="500" height="70" alt="Similarity?" />][2]
+[<img src="https://static.flickr.com/88/260955401_0ed91d1bd7.jpg" width="500" height="70" alt="Similarity?" />][2]
 
 Similar right? But I really shouldn't lose sleep after it. I actually forgot about the whole thing until a friend of mine approached the guy about the *striking similiarities*, this is what he had to say:
 
