--- a/web/content/posts/2006-12-13-halfway-there.mdx
+++ b/web/content/posts/2006-12-13-halfway-there.mdx
@@ -13,7 +13,7 @@ So I'm going to take the time to talk about the first stage of this redesign.
 
 Time for the mentality part, because I never really explained the *why* of this redesign. Thoughts of the eminent 23rd version of Avalonstar began at about the same time I began [Revyver][3], so about a month after last May's CSS Reboot. I saw the first version of the Aries Project as an experiment in changing the way people interacted with Avalonstar while also putting my categories at the forefront. In theory, it was an awesome experiment and it expanded my PHP knowledge. But there were a lot of problems with it. People started having trouble with cookies, [individuals][4] were complaining about contrast, there were a lot of elements missing (such as headers from the post pages that I never got to), and [nobody][5] really knew which post in my listing was the newest one (if they suffered from said cookie problem).
 
-[<img src="http://static.flickr.com/77/163502744_081d4f65b3.jpg" width="500" height="375" alt="Hello Whiteboard" />][6]
+[<img src="https://static.flickr.com/77/163502744_081d4f65b3.jpg" width="500" height="375" alt="Hello Whiteboard" />][6]
 
 Even with [the warm reception that version 22 received][7], there were an equal number of small but valid complaints. As those numbers grew, I started to "eat my own dog food" and the taste started to grow sour. I didn't even like browsing my own site. So that was the last straw and I began to think of what I could improve. On June 9th I started doing something that I had never done for a version of Avalonstar -- wireframe it. Or in my mind, "I have a whiteboard, I'm holding a marker, I should draw something." For the longest time, that's what version 23 existed as, a wireframe. I had no design in mind for it; not even a clue. What I did continue to do was rework the drawing, periodically erasing it all to see if what was in my mind still reflected what I had drawn previously. Sure enough, the drawing behind me marked in orange now reflects what it was in the picture I just showed you.
 
@@ -58,7 +58,7 @@ After putting doing some dirty styling below this category widget, I moved on to
 
 Yea, knew this would come up. Avalonstar went dark again as you can see as that was my next step in the process. To be honest, I've enjoyed Avalonstar dark and every time I stepped in the shower (my place of inspiration) I haven't envisioned it in any other fashion. So sorry to those people who wished for a lighter version, maybe I'll just build a stylesheet with the colors inverted. Yet, if I were to force myself to go light, one, I wouldn't be my best effort and two, it wouldn't feel like it was mine. So with that being said, I started adding more graphical elements to the page. More graphical elements being the Phoenix shield, the masthead placeholder (which will soon carry some artwork inside) and one new addition.
 
-[<img src="http://static.flickr.com/142/321042660_41e06d35d9.jpg" width="422" height="500" alt="Sword Development" />][17]
+[<img src="https://static.flickr.com/142/321042660_41e06d35d9.jpg" width="422" height="500" alt="Sword Development" />][17]
 
 I've always wanted to create a sword when I created the Phoenix shield, but I never got the chance to try it out. Since I was planning to take a different route, I thought, why the hell not? So I took about half-a-day looking at swords on Google Images. After failing to find a sword that looked decent enough in my eyes, I pulled out my Final Fantasy XII strategy guide and looked there. So what you see behind the shield is a sword inspired by Final Fantasy XII. At the moment it's not going to be a permanent part of the logo; it's just sort of there to prevent the shield from feeling lonely.
 
