--- a/web/content/posts/2007-01-14-a-kitty-break.mdx
+++ b/web/content/posts/2007-01-14-a-kitty-break.mdx
@@ -8,12 +8,12 @@ I was going to write something on a more serious note today, but I was uploading
 ## Willow
 <small>(The Whore)</small>
 
-[<img src="http://farm1.static.flickr.com/133/356680871_5f418258ef.jpg" width="500" height="333" alt="Willow & Sakura Iro" />][1]
+[<img src="https://farm1.static.flickr.com/133/356680871_5f418258ef.jpg" width="500" height="333" alt="Willow & Sakura Iro" />][1]
 
 ## Ravyn
 <small>(The Bully)</small>
 
-[<img src="http://farm1.static.flickr.com/125/356675904_401032fd1e.jpg" width="500" height="333" alt="Ravyn & The Ribbon (Part 2)" />][2]
+[<img src="https://farm1.static.flickr.com/125/356675904_401032fd1e.jpg" width="500" height="333" alt="Ravyn & The Ribbon (Part 2)" />][2]
 
 It's pretty much a given now that I'm a cat lover and I have four cats to prove it, [and I've talked about my "children" a few times before.][3] You never realize how much of an effect a pet has on your life until you get one - or four. Even though I love, and torture, all of my cats equally - there's something about those two that strikes me as special. Maybe because they're so odd, or maybe because they were my first pets (We got them within a few weeks of each other). Maybe because I've practiced taking photos of these two more than the other two cats (Willow especially is very photogenic).
 
