--- a/web/content/posts/2007-01-25-say-hello-to-sidebar.mdx
+++ b/web/content/posts/2007-01-25-say-hello-to-sidebar.mdx
@@ -3,7 +3,7 @@ title: "Say Hello to Sidebar"
 date: 2007-01-25T15:15:00Z
 ---
 
-[<img src="http://farm1.static.flickr.com/155/353307718_579bac79cf_m.jpg" width="160" height="240" alt="Planning Something. &gt;_&gt;" />][8]
+[<img src="https://farm1.static.flickr.com/155/353307718_579bac79cf_m.jpg" width="160" height="240" alt="Planning Something. &gt;_&gt;" />][8]
 
 I'm excited and honored to announce to all of you the start of something that I've personally been extremely anxious to do in recent memory. Ever since last year's SXSW, there were a lot of ideas being thrown around and a feeling of empowerment. Unfortunately, ideas born that way usually stay as ideas. I'm happy to say this is not the case.
 
