--- a/web/content/posts/2007-02-13-the-road-to-sxsw.mdx
+++ b/web/content/posts/2007-02-13-the-road-to-sxsw.mdx
@@ -11,7 +11,7 @@ The road to SXSW is a hard one, especially when you don't have employers to back
 
 ## The **actual** road to SXSW
 
-[<img src="http://farm1.static.flickr.com/131/376940180_508c6b39c0_m.jpg" width="228" height="240" alt="My Route to SXSW" />][2]
+[<img src="https://farm1.static.flickr.com/131/376940180_508c6b39c0_m.jpg" width="228" height="240" alt="My Route to SXSW" />][2]
 
 Yes, I'm driving to Austin this year. There are many reasons for this, the main reason being the <del>kids</del> I mean <ins>cats</ins>. To make a long story short, putting four cats into a kitty hotel for the numerous nights we'd be gone would equate to probably more than what we'd be spending for our own lodging. Instead, the first leg of our trip will take us down to Los Angeles and Casa Verduzco (Jen's parent's place) to drop off said felines. From there it's about a 2 day trip to Austin. It'll be the first time Jen and I have taken a road trip in our 3 years, 11 months and 24 days of being together; so we're both looking forward to the experience. Although... I'm sure the RX is not, but once he sees the open roads of the southwest, he'll change his mind. We're planning on getting into Austin mid-day Friday. (So yes, you'll be able to see my beat up Mazda if you're going. :P)
 
