--- a/web/content/posts/2007-06-26-final-fantasy-san-francisco.mdx
+++ b/web/content/posts/2007-06-26-final-fantasy-san-francisco.mdx
@@ -8,9 +8,9 @@ Today Jen and I had the chance to visit the Sony Metreon in San Francisco for [a
 ## 4:53 PM
 I would have loved to live blog this, but I think that [San Francisco Wi-Fi deal with Google][2] fell through. It would have came in mighty handy right about now. Well, we got here late. Well, later than we had hoped. Stupid traffic. Anyway, we got a shot of the line at the Metreon while looking for a parking spot and found that it wrapped around the wall facing Mission Street. Unfortunately, any hope of us being one of the first 100 quickly faded. I guess we're definitely not hardcore enough. Speaking of hardcore, I found it funny that within 30 seconds of finding the end of the line, we overheard a few guys talking about Metal Gear cosplay. One of the guys was a bit outspoken, holding his PSP close to his heart. The three soon talked about how much shorter the line would be if the people "with crappy DSes" weren't around. Hey, I have a "crappy DS" you jerk. *sigh* I know it's a Final Fantasy event being held at a SONY property, but I guess that's teenagers for you. There are a few restless individuals who have been coming up and down our end of the line saying that the line to the other side of the building was the better one, and that there were TWO lines. Um... logic would say when a line wraps around a building with a main entrance at the corner, then yes, they'd split the line so happy customers don't run into angsty teens.
 
-[<img src="http://farm2.static.flickr.com/1405/63791675 8_7bcddf02a1_m.jpg" width="240" height="180" alt="Final Fantasy Poster " />][3]
-[<img src="http://farm2.static.flickr.com/1099/637054317_f8b312bd90_m.jpg" width="240" height="180" alt="Final Fantasy II Poster" />][4]
-[<img src="http://farm2.static.flickr.com/1341/637054457_9bbfc9189a_m.jpg" width="240" height="180" alt="Gamespot Interviewing Squall" />][5]
+[<img src="https://farm2.static.flickr.com/1405/63791675 8_7bcddf02a1_m.jpg" width="240" height="180" alt="Final Fantasy Poster " />][3]
+[<img src="https://farm2.static.flickr.com/1099/637054317_f8b312bd90_m.jpg" width="240" height="180" alt="Final Fantasy II Poster" />][4]
+[<img src="https://farm2.static.flickr.com/1341/637054457_9bbfc9189a_m.jpg" width="240" height="180" alt="Gamespot Interviewing Squall" />][5]
 
 ## 5:01 PM
 A guy just came back cursing a bunch of people saying that the employees wouldn't tell him anything about what was being given. There are about 50 people on the near side of the Playstation store, and we're sitting right at about 110 according to a rough count by the F-bomber. A Playstation store rep just came around to tell us the usual "no cameras, no recording, Squeenix doesn't like that, you'll be kicked out,etc."
