--- a/web/content/posts/2008-06-28-revyver-week.mdx
+++ b/web/content/posts/2008-06-28-revyver-week.mdx
@@ -5,7 +5,7 @@ date: 2008-06-28T23:45:00Z
 
 Two years ago. When I think about it, it's a bit hard to believe I [revealed Revyver to the world two years ago this week][1]. Maybe it's because I haven't really done much with it? Seriously, it doesn't feel like two years but the calendar begs to differ. I only noticed last week that birthday week was coming so, as usual, my focus completely shifted to coming up with things to go along with this seemingly special occasion.
 
-[<img src="http://farm4.static.flickr.com/3004/2620080181_50d4c09b79.jpg" width="500" height="281" alt="The Skies Begin to Change" />][4]
+[<img src="https://farm4.static.flickr.com/3004/2620080181_50d4c09b79.jpg" width="500" height="281" alt="The Skies Begin to Change" />][4]
 
 I've alluded to many times the shift that Revyver has taken, one that I'm sure you've noticed if you've found yourself at the site over the past few months. However, I've never gotten the chance to properly explain the chain of events leading to this very interesting path. My excuses for not doing so are running out, so you'll see that this week. Throw in a surprise and a post elaborating on [one of the diagrams][2] I drew last week.
 
