--- a/web/content/posts/2008-06-30-birthdays-and-test-tubes.mdx
+++ b/web/content/posts/2008-06-30-birthdays-and-test-tubes.mdx
@@ -11,7 +11,7 @@ A few weeks ago, after getting an email asking about the archives, I said to mys
 
 With that, I'm very proud to introduce, [Revyver Labs][4] which you can find at [labs.revyver.com][4]. To make a potentially long story a lot shorter, this is where I will release all of my works for now on. It's obviously on a domain, lovingly taken care of by [Media Temple][5], that's *far far away* from the reach of my nuking button.
 
-[<img src="http://farm4.static.flickr.com/3047/2626835621_e3cf4bbc02.jpg" width="371" height="500" alt="Revyver Labs" />][20]
+[<img src="https://farm4.static.flickr.com/3047/2626835621_e3cf4bbc02.jpg" width="371" height="500" alt="Revyver Labs" />][20]
 
 Everything on the Labs is provided as a sort of [donation ware][6], so buy us some [boba milk tea][7] if you want to say thanks. But you wonâ€™t only be helping us help you. **Fifty-percent (50%)** of all donations will go towards the [American Society for the Prevention of Cruelty to Animals][8], or the ASPCA. So you'll be helping animals, [much like our own cats (2 of which are rescues)][9] find loving homes. But in the end, it's not about the money at all, it's about me wanting to help people learn and grow in my own special way (read: I can't teach for crap, I leave that to people like [Andy][10] and [Dan][11]).
 
