--- a/web/content/posts/2008-07-15-mobile-assimilation.mdx
+++ b/web/content/posts/2008-07-15-mobile-assimilation.mdx
@@ -19,11 +19,11 @@ Then the lovely AppStore for the iPhone came out and I realized what my problem 
 
 ## Enter Things, for the iPhone
 
-[<img src="http://farm4.static.flickr.com/3088/2673161628_d766f22277_m.jpg" width="160" height="240" alt="The App Screen" />][13] [<img src="http://farm4.static.flickr.com/3266/2673161670_19b6bee789_m.jpg" width="160" height="240" alt="Things" />][14]
+[<img src="https://farm4.static.flickr.com/3088/2673161628_d766f22277_m.jpg" width="160" height="240" alt="The App Screen" />][13] [<img src="https://farm4.static.flickr.com/3266/2673161670_19b6bee789_m.jpg" width="160" height="240" alt="Things" />][14]
 
 So last night, I buckled and got [Things for the iPhone][8]. Sure enough, I sat there typing at least 10 to-do items in the first 30 minutes of using it. The kicker is, I kept checking and inputting more tasks as they came out mind. Now, let's back up a little bit.
 
-[<img src="http://farm4.static.flickr.com/3239/2672343045_74c2605fa8_m.jpg" width="160" height="240" alt="Projects in Things" />][15] [<img src="http://farm4.static.flickr.com/3157/2672343083_eb8a070af4_m.jpg" width="160" height="240" alt="Tasks in Things" />][16]
+[<img src="https://farm4.static.flickr.com/3239/2672343045_74c2605fa8_m.jpg" width="160" height="240" alt="Projects in Things" />][15] [<img src="https://farm4.static.flickr.com/3157/2672343083_eb8a070af4_m.jpg" width="160" height="240" alt="Tasks in Things" />][16]
 
 *Why* did mobile work for me? There are three things I have with me at all times.
 
