--- a/web/content/posts/2008-08-17-the-addictionary.mdx
+++ b/web/content/posts/2008-08-17-the-addictionary.mdx
@@ -9,7 +9,7 @@ I felt a resonance and a chance to help a company who has had the worst luck wit
 
 The Addictionary was a challenging project as was the process of finishing it. So rather than describe my mental state (and unintentionally skipping over the process) as I usually seem to do, I'm going to try and hit some of the highlights and downfalls that occurred over the past six weeks.
 
-[<img src="http://farm4.static.flickr.com/3166/2767297047_c1413d4483_b.jpg" width="620" height="471" alt="The Addictionary" />][24]
+[<img src="https://farm4.static.flickr.com/3166/2767297047_c1413d4483_b.jpg" width="620" height="471" alt="The Addictionary" />][24]
 
 ## So what _is_ the Addictionary?
 
@@ -29,7 +29,7 @@ However, it was Dan that confided in to find the star of the show. He did _just_
 
 The old Addictionary logo was "set" in Georgia, with no kerning of any kind. Georgia _with_ kerning might have worked, but that wasn't the look I wanted for them. They needed something that said, "you could put me in a book if you wanted to and it'd still work!" After about a day of looking, Dan came back to me with [Capsa][11] from [TypeTrust][12]. Capsa is a beautiful face that the guys at Spectrum automatically fell in love with. Capsa was also my introduction into what OpenType can really do. So much so that I want any font I purchase in the future to have the same type of flexibility. Seeing how many combinations you can make is also a great time waster.
 
-[<img src="http://farm4.static.flickr.com/3202/2771716909_d7424f01d9_o.png" width="620" height="300" alt="Capsa" />][25]
+[<img src="https://farm4.static.flickr.com/3202/2771716909_d7424f01d9_o.png" width="620" height="300" alt="Capsa" />][25]
 
 Capsa's co-star was my recently formed addiction, [Gotham][13]. My reasoning for this extends no farther than, "it's beautiful and it just worked." If anybody tries to cite the political undertones or mention that the use of this particular font is a fad, I'll punch them in the face. Really now, if I needed a reason for all of my decisions, I'd probably be a corporate asshat by now. I shall now place Gotham alongside Helvetica Neue in my "overused, but I don't give a crap," box.
 
@@ -39,7 +39,7 @@ Finally, I needed body type. Most people would see Georgia. But what's weird abo
 
 To preface, I have to admit I'm kicking myself for making it so monochrome. Part of the reason that it ended up monochrome was the fact that I didn't have enough time to go any further with it, the other part I'll address below. However, it worked out as Spectrum liked the feel of it. Actually, I was so wrapped up in trying to make the typography work that I completely forgot about throwing any colors in, despite what I just said. Monochrome did allow me to use color selectively. I was able to form different paradigms for different functions around the site. A green arrow and a red arrow would always prompt the user to vote, for example. A green box, no matter what [Chameleon icon][16] (and there were a lot of those) was inside would signify an "add" action. Blue would signify an action that doesn't add anything to the site, but rather carries them to another part of it, etc. This was honestly a product of laziness, but it was quite effective when the group started to test it.
 
-[<img src="http://farm4.static.flickr.com/3221/2771716917_94ff955b3a_o.png" width="620" height="300" alt="Boxes and Arrows" />][26]
+[<img src="https://farm4.static.flickr.com/3221/2771716917_94ff955b3a_o.png" width="620" height="300" alt="Boxes and Arrows" />][26]
 
 The layout itself was once again created using [960.gs][17]. While I always find myself using the Photoshop templates, I only used the system's markup in the header and footer, since those would never change no matter what "silo," a so-called child site of the Addictionary would be. This would allow partners to rearrange the site without having to touch the markup. Granted, I only noticed this after I coded the site the first time causing me to go back and do it all over again.
 
@@ -49,7 +49,7 @@ This is more of an aside, but I was quite intrigued by the way Spectrum handled 
 
 Facebook and Automattic were inherently "agile." So to think of development any other way was foreign to me. Spectrum did an awesome job, even with the environment and timeframe being less than ideal. The most interesting part of the process to me was how low-tech their issue management system was. Even though they had [Crucible][18] and [Jira][19], which would be the equivalent of say [GitHub][20] and [Lighthouse][21] or [Sifter][22] respectively, minus the code reviewing features. They threw that all away and used--**sticky notes**. The funniest thing is that the sticky notes were surprisingly effective. While closing tickets in Trac is a great feeling, running from your computer chair to the validation wall and slamming said ticket onto said wall is an even greater feeling that never failed to put a smile on my face. Granted, the environment was right. Everybody working on the launch was in-house, so sticky notes took less time to write and triage.
 
-[<img src="http://farm4.static.flickr.com/3140/2770865629_643a36d535_m.jpg" width="180" height="240" alt="Priority 2" />][27] [http://farm4.static.flickr.com/3170/2771710892_720682120a_m.jpg][28] [<img src="http://farm4.static.flickr.com/3221/2770865417_6faf6670d1_m.jpg" width="180" height="240" alt="The &quot;Final Word&quot;" />][29]
+[<img src="https://farm4.static.flickr.com/3140/2770865629_643a36d535_m.jpg" width="180" height="240" alt="Priority 2" />][27] [https://farm4.static.flickr.com/3170/2771710892_720682120a_m.jpg][28] [<img src="https://farm4.static.flickr.com/3221/2770865417_6faf6670d1_m.jpg" width="180" height="240" alt="The &quot;Final Word&quot;" />][29]
 
 ## IE6 gets its revenge.
 
@@ -73,7 +73,7 @@ Beside the browser problems and the compressed timeline, I'm delighted with what
 
 Although I closed Revyver's doors to the client world, something about the guys at SpectrumDNA spurred me to make an exception. Maybe it's fate, maybe it's something else. But things are looking up, and you'll see why soon enough.
 
-[<img src="http://farm4.static.flickr.com/3273/2771711296_2fea1d5a00.jpg" width="500" height="375" alt="Face of Determination" />][30]
+[<img src="https://farm4.static.flickr.com/3273/2771711296_2fea1d5a00.jpg" width="500" height="375" alt="Face of Determination" />][30]
 
 [1]: http://spectrumdna.com/
 [2]: http://addictionary.org/
