--- a/web/content/posts/2008-09-08-the-web-framework-for-ponies.mdx
+++ b/web/content/posts/2008-09-08-the-web-framework-for-ponies.mdx
@@ -5,17 +5,17 @@ date: 2008-09-08T22:00:00Z
 
 As many of you know, [DjangoCon][1] came to a close yesterday. Long story short, one of my favorite conferences ever. The laughs, memories, connections and available knowledge -- endless. Soon, there'll be videos of all the talks for all to enjoy, but I couldn't help acting on one of my favorite talks of the first night, [Cal Henderson's][2] [keynote on why he hates Django.][8]
 
-[<img src="http://farm4.static.flickr.com/3247/2835538558_bf29a17402.jpg" width="500" height="332" alt="Cal Henderson on Why I hate Django?" />][9]
+[<img src="https://farm4.static.flickr.com/3247/2835538558_bf29a17402.jpg" width="500" height="332" alt="Cal Henderson on Why I hate Django?" />][9]
 
 In it, amongst other things, he talked about how Django needed a mascot. One that was *awesome* and had *magical powers*. Well, somewhere inside my head, I agreed. Since the pony seems to have much historical significance within the Django project, I give you the logo for "the web framework for *ponies* with *magical powers*." [Django is now awesome.][3]
 
-[<img src="http://farm3.static.flickr.com/2052/2842638666_b24158c6f6.jpg" width="500" height="250" alt="The Framework for Ponies" />][10]
+[<img src="https://farm3.static.flickr.com/2052/2842638666_b24158c6f6.jpg" width="500" height="250" alt="The Framework for Ponies" />][10]
 
 [Wilson][4], I *expect* the redesign tomorrow. ;)
 
 **Update**: Now in green by popular demand!
 
-[<img src="http://farm4.static.flickr.com/3200/2844663076_225ba15523.jpg" width="500" height="250" alt="The Framework for Green Ponies" />][11]
+[<img src="https://farm4.static.flickr.com/3200/2844663076_225ba15523.jpg" width="500" height="250" alt="The Framework for Green Ponies" />][11]
 
 **Update 2**: To my amazement there [is now a website dedicated][5] the lovable pony. Once I find out who made it, I'll be sure to talk to them about what my plan was for shirts. :)
 
