--- a/web/content/posts/2008-11-04-change-and-withdrawal.mdx
+++ b/web/content/posts/2008-11-04-change-and-withdrawal.mdx
@@ -9,11 +9,11 @@ After 21 months, the people have spoken, the person I wanted for President of th
 
 Every site that has come out of the Obama campaign has been beautiful, from the main campaign site shown below to the "Fight the Smears" campaign. The level of detail and the amount of thought put into this has boggled my mind. Maybe my mind is easy to impress, but I'm sure most designers would tend to agree with me. :)
 
-[<img src="http://farm4.static.flickr.com/3225/3004177859_ba384e6b05_o.png" width="620" height="340" alt="The &quot;O&quot;" />][1]
+[<img src="https://farm4.static.flickr.com/3225/3004177859_ba384e6b05_o.png" width="620" height="340" alt="The &quot;O&quot;" />][1]
 
 *At least that's what I think.*
 
-[<img src="http://farm4.static.flickr.com/3183/3004177885_ba7da13cb3_o.png" width="620" height="620" alt="Obama/Biden Thumbnail" />][2]
+[<img src="https://farm4.static.flickr.com/3183/3004177885_ba7da13cb3_o.png" width="620" height="620" alt="Obama/Biden Thumbnail" />][2]
 
 **I will miss this.** Wether or not you voted for Obama, the superiority of this identity will stand for years to come. I for one, really hope that the design team migrates to Washington and redesigns it. Start with the White House, then move on to say, the FBI and the FCC and beyond, they desperately need it. :)
 
