--- a/web/content/posts/2008-12-10-the-first-30-days.mdx
+++ b/web/content/posts/2008-12-10-the-first-30-days.mdx
@@ -17,7 +17,7 @@ The Addictionary has been gaining some traction as well. The [Addictionary Prope
 
 Our first project, *Hello! Ranking* has been progressing quite nicely. I've had a good amount of time in between the hours I do Spectrum work to hack on our little J-pop game. It's been a lot of fun to see such a big idea of ours start to see the light and we're hoping to invite a group of Jen's peers to play around with it before the new year.
 
-[<img src="http://farm4.static.flickr.com/3139/3098196535_42c09299aa_o.png" width="620" height="340" alt="Hello! Ranking — Preview" />][12]
+[<img src="https://farm4.static.flickr.com/3139/3098196535_42c09299aa_o.png" width="620" height="340" alt="Hello! Ranking — Preview" />][12]
 
 Probably the most exciting part of the process has been envisioning the potential popularity of the service. When we first came up with the idea earlier this year, we only saw maybe one or two blogs covering Hello! Project rank their favorite artists. Now we're seeing many newer blogs post ranks as introductory posts and still others that keep their rankings up-to-date manually. The fact that we'll be making all of this that much easier for them makes us extremely excited. For me, it's been a validation of all the work we've already put into it.
 
