--- a/web/content/posts/2009-01-21-geek-motivation.mdx
+++ b/web/content/posts/2009-01-21-geek-motivation.mdx
@@ -9,7 +9,7 @@ We designers and developers are a special breed of person. Like artists, we're c
 
 Well, let me give you an example. I've been "dieting" since November and for the first time in recent memory, I've been able to stay on it for more than two weeks. Like others with the same goal, I've tried so many different things. [Colin Devroe][1] had ["The Diet"][2], his weekly weight loss blog that inspired people to do the same. I loved the idea, but un/fortunately, I'm not very comfortable with taking pictures of myself topless, *especially* my belly. Not that you *had* to do that... well, nevermind. Then there were the "web 2.0" services like [Traineo][3]. Traineo had pretty graphics, spots for exercise routines, even a motivator system. Apparently, I suck at being a fitness motivator since Traineo has been scolding me for not checking up on [Anton][4] lately.
 
-[<img src="http://farm4.static.flickr.com/3232/3156662364_f6b54faee7.jpg" width="500" height="167" alt="Weightbot 2008" />][12]
+[<img src="https://farm4.static.flickr.com/3232/3156662364_f6b54faee7.jpg" width="500" height="167" alt="Weightbot 2008" />][12]
 
 Then came [Weightbot][5], the highly-lickable, super-awesome weight tracking iPhone application by [Tapbots][6]--programmed by [Paul Haddad][7] and lovingly designed by [Mark Jardine][8]. I could go on for hours about how beautiful the application is, and that's exactly why it worked for me. Now, [I've written about my success with GTD using Things in the past][9]. Weightbot is an example of how I found the motivation to want to lose weight, just like Things gave me the motivation to get organized.
 
