--- a/web/content/posts/2009-03-21-suittie.mdx
+++ b/web/content/posts/2009-03-21-suittie.mdx
@@ -9,13 +9,13 @@ Adii gave me the task of creating a business-style theme, which was a bit of a s
 
 He took a look at my portfolio and pointed to the design I did for [Django Plugables][4] as something that would make a good candidate for the theme. I didn't mind since _\*cough\*_ that design is on its way out anyway _\*cough\*_ and I welcomed the chance to remix it a little. Remember, I designed the site in a day and coded it in four, so I didn't really put as much thought into it as I normally would. It just worked. :)
 
-[<img src="http://farm4.static.flickr.com/3438/3373456167_39d02f9051.jpg" width="500" height="438" alt="Suit&amp;tie — Original" />][5]
+[<img src="https://farm4.static.flickr.com/3438/3373456167_39d02f9051.jpg" width="500" height="438" alt="Suit&amp;tie — Original" />][5]
 
 **So here's "Suit&amp;tie."**
 
 More and more lately I've been a lot more open to using touches of translucency in designs. As always, I lean on more colorful assets such as photos and screenshots to provide the "pop" for the design. The jQuery carousel in the middle is obviously inspired from the Springboard on the iPhone (and I can't wait to actually see that effect coded). Although I designed this from scratch without the Django Plugables design to work from, you can obviously see the elements I pulled from it--examples being the navigation and the content area.
 
-[<img src="http://farm4.static.flickr.com/3617/3374271838_953555267c_m.jpg" width="240" height="210" alt="Suit&amp;tie — Blue" />][6] [<img src="http://farm4.static.flickr.com/3539/3373456203_2ca04afb78_m.jpg" width="240" height="210" alt="Suit&amp;tie — Blue/Gray" />][7]
+[<img src="https://farm4.static.flickr.com/3617/3374271838_953555267c_m.jpg" width="240" height="210" alt="Suit&amp;tie — Blue" />][6] [<img src="https://farm4.static.flickr.com/3539/3373456203_2ca04afb78_m.jpg" width="240" height="210" alt="Suit&amp;tie — Blue/Gray" />][7]
 
 Why the striped sock? Well, the theme was originally called "Suit&amp;tie" until I started playing with some stripes and the obvious name of "Striped" took over (you can still see that name on the screenshots in the footer, whoops). The stripes ultimately didn't make the cut, but the sock is there to mourn it.
 
