--- a/web/content/posts/2009-03-25-bryan-and-jen-in-japan.mdx
+++ b/web/content/posts/2009-03-25-bryan-and-jen-in-japan.mdx
@@ -13,7 +13,7 @@ I've been a bit at a loss at what to feel, even now. It's a sort of excitement, 
 
 We wanted to save and share our memories of this first trip, so with the help of Jen's discerning eye, I took some time this week to skin a [Tumblr][1] for it. The domain it sits at, [konokoi.com][2], is one I bought long ago when Jen and I first met. It'll serves as a suitable spot for the blog before it gives way to our wedding site in the coming months. :)
 
-[<img src="http://farm4.static.flickr.com/3614/3384846080_cea497a303.jpg" width="500" height="431" alt="Konokoi" />][5]
+[<img src="https://farm4.static.flickr.com/3614/3384846080_cea497a303.jpg" width="500" height="431" alt="Konokoi" />][5]
 
 If you're interested in keeping up, by all means follow us through the [Tumblr blog][2], [RSS][3] or [my Flickr account][4]. Other than updating the blog or Flickr, I'm going to (obviously) try and keep my Internetage to a minimum. With that said, see you on the other end! :D
 
