--- a/web/content/posts/2009-09-09-itunes.mdx
+++ b/web/content/posts/2009-09-09-itunes.mdx
@@ -5,7 +5,7 @@ date: 2009-09-09T14:00:00Z
 
 So if you're living under a rock, iTunes 9 came out today. To practice writing short posts, I only have two things to say:
 
-[<img src="http://farm3.static.flickr.com/2589/3904694871_d8980b7e78.jpg" width="500" height="313" alt="Genius Mixes and Plastic" />][1]
+[<img src="https://farm3.static.flickr.com/2589/3904694871_d8980b7e78.jpg" width="500" height="313" alt="Genius Mixes and Plastic" />][1]
 
 ## To the iTunes UI Team
 
