--- a/web/content/posts/2010-01-08-bowling-into-retirement.mdx
+++ b/web/content/posts/2010-01-08-bowling-into-retirement.mdx
@@ -17,7 +17,7 @@ If you're asking "why not just let somebody else run it," my answer is that "it 
 
 With that said, to everybody that has attended since 2006, thank you so much for your support. :)
 
-[<img src="http://farm4.static.flickr.com/3606/3359328096_795c0bb116_m.jpg" width="180" height="240" alt="Bitches." />][4]
+[<img src="https://farm4.static.flickr.com/3606/3359328096_795c0bb116_m.jpg" width="180" height="240" alt="Bitches." />][4]
 
 [^1]: Seriously, no pun intended. :P
 
