--- a/web/content/posts/2006-03-21-introducing-chaoticsoul.mdx
+++ b/web/content/posts/2006-03-21-introducing-chaoticsoul.mdx
@@ -7,7 +7,7 @@ Hah, I can hear the Avalonstar fans of yesteryear rejoice. But no, [this is not 
 
 This has been a great nostalgic project at the least, since I was able to revisit my old code and laugh at my old process. But enough of this reminiscing. What you see here is by no means a final version, but whether or not I iterate on this is left to be determined. Because I haven't tested this in IE, even though this is a 1.0, treat it like it's an alpha. I really just wanted to get this out and into your hands to play with. I'm sure it at least degrades gracefully in all those trashy browsers. ;)
 
-[<img src="http://farm1.static.flickr.com/44/116273084_c3b148e69e.jpg" width="370" height="500" alt="ChaoticSoul Alpha" />][2]
+[<img src="https://farm1.static.flickr.com/44/116273084_c3b148e69e.jpg" width="370" height="500" alt="ChaoticSoul Alpha" />][2]
 
 Okay, bugs. How well this is received will choose the bug reporting route I take, but for now just keep the bugs coming to my email or the comments below. Either way I hope you like it. Finally, a [special thanks to Phu][3] for inspiring me to do this. Let me know if you use it!
 
