--- a/web/content/posts/2006-06-17-racing-beat-heaven.mdx
+++ b/web/content/posts/2006-06-17-racing-beat-heaven.mdx
@@ -5,15 +5,15 @@ date: 2006-06-17T11:45:00Z
 
 Yesterday, I had the pleasure of finally having some time away from the fast-paced life to relax and work on one of my many other loves, and I'm sure you can already guess what that is. I've been spending time with family here in Banning and intentionally didn't bring my computer with me. Anyway, that's besides the point. I guess you could say it was a bonus that my family has a house with a **garage**. Okay, *now* you see where this is going. Yes, I installed a few more things onto the lovely Wankel-based machine, and yes they all happened to be [Racing Beat][1] products! Could I be any more predictable?
 
-[<img align="center" src="http://static.flickr.com/51/168687747_09c4f6e325.jpg" width="500" height="375" alt="Racing Beat" />][2]
+[<img align="center" src="https://static.flickr.com/51/168687747_09c4f6e325.jpg" width="500" height="375" alt="Racing Beat" />][2]
 
 To those who haven't heard of them, the people at Racing Beat are **the** rotary specialists and they've managed to prove it many times, setting multiple land speed records with their [modified RX-7s][3] at the Bonneville National Speed Trials in Wendover, Utah. However, their experience not only covers rotaries, but Mazda's Miata series and the now defunct Protoge. At any rate, I took a trip to their headquarters. As you probably know from [past headquarter infiltration experiences][4], I love taking trips to the companies I deal with. Needless to say, it was like stepping into a toy store. After the long trip to Anaheim to see them and the long trip back, I had some new toys to install. From left-to-right, the REVi Intake System, Ram Air Duct for REVi, 2 Oil Cooler Screens and 1 Radiator Screen.
 
-[<img src="http://static.flickr.com/64/168691158_b7153f41b5.jpg" width="500" height="375" alt="What I'm Installing" />][5]
+[<img src="https://static.flickr.com/64/168691158_b7153f41b5.jpg" width="500" height="375" alt="What I'm Installing" />][5]
 
 The install took me a few hours to do, despite what was written in the manuals. What attributed most to this was the fact that I didn't have pliers and I was by myself. However, I do think the pictures will provide a good view of what I went through, so I'll leave you with that.
 
-[<img src="http://static.flickr.com/59/168689067_6ed9dc5caa_m.jpg" width="240" height="180" alt="It's Time" />][6] [<img src="http://static.flickr.com/70/168689242_f2142c7a53_m.jpg" width="240" height="180" alt="My Light!?!" />][7] [<img src="http://static.flickr.com/77/168689407_01eb9c260b_m.jpg" width="240" height="180" alt="Lonely Front Bumper" />][8] [<img src="http://static.flickr.com/68/168689634_9410f7dc9d_m.jpg" width="240" height="180" alt="Frontal Nudity" />][9] [<img src="http://static.flickr.com/49/168690439_ab8536c239_m.jpg" width="240" height="180" alt="The VFAD" />][10] [<img src="http://static.flickr.com/60/168690711_1d88d53529_m.jpg" width="240" height="180" alt="The Stock Box" />][11] [<img src="http://static.flickr.com/56/168690941_643ccb2d4d_m.jpg" width="240" height="180" alt="The Stock Filter" />][12] [<img src="http://static.flickr.com/56/168691770_1d09d2d880_m.jpg" width="240" height="180" alt="REVi Installed!" />][13] [<img src="http://static.flickr.com/47/168692006_7a5929c12a_m.jpg" width="240" height="180" alt="Duct Installed!" />][14]
+[<img src="https://static.flickr.com/59/168689067_6ed9dc5caa_m.jpg" width="240" height="180" alt="It's Time" />][6] [<img src="https://static.flickr.com/70/168689242_f2142c7a53_m.jpg" width="240" height="180" alt="My Light!?!" />][7] [<img src="https://static.flickr.com/77/168689407_01eb9c260b_m.jpg" width="240" height="180" alt="Lonely Front Bumper" />][8] [<img src="https://static.flickr.com/68/168689634_9410f7dc9d_m.jpg" width="240" height="180" alt="Frontal Nudity" />][9] [<img src="https://static.flickr.com/49/168690439_ab8536c239_m.jpg" width="240" height="180" alt="The VFAD" />][10] [<img src="https://static.flickr.com/60/168690711_1d88d53529_m.jpg" width="240" height="180" alt="The Stock Box" />][11] [<img src="https://static.flickr.com/56/168690941_643ccb2d4d_m.jpg" width="240" height="180" alt="The Stock Filter" />][12] [<img src="https://static.flickr.com/56/168691770_1d09d2d880_m.jpg" width="240" height="180" alt="REVi Installed!" />][13] [<img src="https://static.flickr.com/47/168692006_7a5929c12a_m.jpg" width="240" height="180" alt="Duct Installed!" />][14]
 
 [1]: http://racingbeat.com/
 [2]: http://www.flickr.com/photos/avalonstar/168687747/
