--- a/web/content/posts/2006-07-23-webvisions-2006-wrap-up.mdx
+++ b/web/content/posts/2006-07-23-webvisions-2006-wrap-up.mdx
@@ -19,7 +19,7 @@ Day 1 started earlier than most days in general, as I found myself up at 6:30 AM
 
 Next was my first panel of the day, "Becoming a Professional Blogger" with [Matt Haughey][6]. Now, it wasn't so much being a professional blogger in regards to say... professionalism, rather than focusuing more on how to make money with your blog. But it wasn't the nitty-gritty of how to make money, it was more of a high-level overview. I found a bunch of his views pretty interesting, and although Avalonstar would never go down that route, it made me think of the possibilities for a blog (with a lot of hard work) to make money. There were some pretty "greedy" people in there, somebody even going as far as to ask what Matt made per year. But rather than try and remember everything that he said, I'll leave you with the picture below, dedicated to [Neil Patel][7] of ACS.
 
-[<img src="http://static.flickr.com/64/195668034_5c5cb11100_m.jpg" width="240" height="180" alt="Say NO to SEO." />][8]
+[<img src="https://static.flickr.com/64/195668034_5c5cb11100_m.jpg" width="240" height="180" alt="Say NO to SEO." />][8]
 
 After that, I had to take care of my little hotel problem. I won't get much into that, but I will say that the WebVisions crew did an awesome job of fixing the mistake. Although, it did take a while, so I was able to get some conversation in with [Jon Snook][9] and [Nick Finck][10], missing out on lunch with [Dan][11], [Keith][12], [Garrett][13], Joshua and Matt. However, I did have a nice lunch/conversation with Snook. From there, I had to take off to make sure that we were able to move rooms in time, so I missed most of the Jon's presentation, "Rapid DOM/AJAX Development," which I effectively got hounded for later on. I have to say, the little segment that I did see was very well presented. Although all of the material went straight over my head, I was able to understand Jon and where he was coming from, also adding that this was his first time doing this type of presentation, ever. So a big hand for my friend Snook. :)
 
@@ -27,7 +27,7 @@ The presentation that followed was about how to build a game engine with Ruby on
 
 Keith, Garrett, Dan and I missed the last presentation; opting to go back to the hotel and get ready for the night ahead. Dan followed me back to my room, saying hi to Jenni and getting a preview of the next day's presentation. On our way down the elevator we were talking about how I had met [Dan Cederholm][14] earlier and how Dan wanted to meet him. Well, the elevator stops on the second floor and speak of the devil, it was Cederholm! So he joined the four of us as we walked over to XV (15), which was the first destination of the night. I felt like a little fanboy walking next to all of them, because they were all inspirations of mine as I was getting settled in the industry. So it was both literally and figuretively, "walking amongst giants."
 
-[<img src="http://static.flickr.com/69/195668878_fbd4814a46_m.jpg" width="240" height="180" alt="Friends and Idols" />][15] [<img src="http://static.flickr.com/65/195669347_aad9308712_m.jpg" width="240" height="180" alt="OMG COFFEE!" />][16] [<img src="http://static.flickr.com/57/194488625_17e43ea40a_m_d.jpg" width="240" height="180" alt="Digital Web Dinner at Kells Irish Pub" />][17]
+[<img src="https://static.flickr.com/69/195668878_fbd4814a46_m.jpg" width="240" height="180" alt="Friends and Idols" />][15] [<img src="https://static.flickr.com/65/195669347_aad9308712_m.jpg" width="240" height="180" alt="OMG COFFEE!" />][16] [<img src="https://static.flickr.com/57/194488625_17e43ea40a_m_d.jpg" width="240" height="180" alt="Digital Web Dinner at Kells Irish Pub" />][17]
 
 Both parties were fun, I was able to have the first of many great conversations with Cederholm, Rubin and Dimon while trying to keep myself cool in a place that only had one fan. The dinner, or the second party, was one of the most humorous I've ever been to. I had the pleasure of meeting [Rael Dornfest][18] (whom I was told looks exactly like [Dan Benjamin][19]). I literally couldn't stop laughing and therefore didn't finish my food. We found out about Cederholm's experiences with dodgeball, Rubin's experiences as a Disneyworld cast member and the group found out about my record in DDR (for Dan and the others, [my videos are here][20]). The night ended on a good note, with Mr. Rubin and I taping episode 13 of Live From the 101. I don't know how often we'll videocast though, it's a scary medium.
 
@@ -35,7 +35,7 @@ Both parties were fun, I was able to have the first of many great conversations 
 
 Judgement day was upon me, and it wasn't one of those easy ones either. I missed half of Cederholm's "Bulletproof" presentation because every time I'd try to get out of bed, the room was so damn cold I went right back to it. What I did see was great, and I expected no less from the king of making text resizing work. Afterwards, I caught up with Dan and [Mike][21] to get ready for our presentation. However, I soon came to find out that I was missing the correct fonts for the presentation. So after passing Keith in the hallway as he was coming in, I rushed back out to the shuttle for a quick trip back to the hotel. During that time, Jen was taking the MAX to come to the convention center, almost getting lost. Talk about a complete miss. I was able to get the fonts, thanks to the quick export feature of Linotype Explorer and the cunning driving skills of [Jack, the shuttle guy][22]. By the time I got back, I was able to get the fonts installed and the presentation was pretty much ready to go. A quick trip to Starbucks completed the whole endeavor and the only thing standing in my way was the panel with a vanilla creme frappuccino there to help me.
 
-[<img src="http://static.flickr.com/78/195670639_db7edd9897.jpg" width="500" height="375" alt="View from the Podium" />][23]
+[<img src="https://static.flickr.com/78/195670639_db7edd9897.jpg" width="500" height="375" alt="View from the Podium" />][23]
 
 The panel was awesome. Frankly, it was a rush once everything started and I just had a really good time moderating it. Mike commented that I wasn't too strict and I let the presentation flow, unlike a lot of prior experiences that he's had. The room was packed, and for the first time I didn't get stricken with the nervousness I usually would in that type of situation. I felt just fine. There was a great connection between the four of us, which is something that a lot of panels lack. We respected each other and played off each other's comments, even though we had little to no time to prepare for it. It was also the first time that I've seen a presentation hijacked. In this case, Mike was talking about good copywriting and asked if there were any copywriters in the room. Well, a certain [Kate Verburg][24] raised her hand and said that she'd be giving out business cards at the end. It was a really funny moment and we all played along with it, but it happened twice, the second time being during the question and answer period. What really surprised me was the number of people that stayed afterwards to talk to us. All in all, it was awesome.
 
@@ -45,7 +45,7 @@ After that, the rest of the day was pretty much a wash. I was able to catch some
 
 I'm going to close this post with a lot of pictures. There is a video that will be featured on the next episodes of Live From the 101, so I'll let the suspense build. Mike Davidson also has a pretty cool video of the experience as well. Needless to say, this night beat out the previous one in how much fun was had. I'll post all the pictures that I have on it, but keep a look out for the video. Oh, one final note. Greeks are crazy.
 
-[<img src="http://static.flickr.com/71/195671774_62309bf8d6_s.jpg" width="75" height="75" alt="Dan in Avalonstar Apparel" />][30] [<img src="http://static.flickr.com/75/195671963_4a4b9a102d_s.jpg" width="75" height="75" alt="Matt Anderson" />][31] [<img src="http://static.flickr.com/65/195672261_5efc6e0468_t.jpg" width="100" height="75" alt="A Group Shot" />][32] [<img src="http://static.flickr.com/62/195672517_bdcbe99a45_t.jpg" width="100" height="75" alt="Double the Lovliness" />][33] [<img src="http://static.flickr.com/77/195672833_1e888c14ed_t.jpg" width="100" height="75" alt="Wow..." />][34] [<img src="http://static.flickr.com/59/195673050_e176f0a3bd_t.jpg" width="100" height="75" alt="Flash Battle" />][35] [<img src="http://static.flickr.com/59/195203260_49550bc4a4_s.jpg" />][36] [<img src="http://static.flickr.com/78/195203218_4dba66eeaf_t.jpg" />][37] [<img src="http://static.flickr.com/77/195203209_1b779db877_t.jpg" />][38] [<img src="http://static.flickr.com/59/195203195_8ba2b04169_t.jpg" />][39] [<img src="http://static.flickr.com/73/195203183_f841b41cf2_t.jpg" />][40] [<img src="http://static.flickr.com/68/195203148_df2895614f_s.jpg" />][41]
+[<img src="https://static.flickr.com/71/195671774_62309bf8d6_s.jpg" width="75" height="75" alt="Dan in Avalonstar Apparel" />][30] [<img src="https://static.flickr.com/75/195671963_4a4b9a102d_s.jpg" width="75" height="75" alt="Matt Anderson" />][31] [<img src="https://static.flickr.com/65/195672261_5efc6e0468_t.jpg" width="100" height="75" alt="A Group Shot" />][32] [<img src="https://static.flickr.com/62/195672517_bdcbe99a45_t.jpg" width="100" height="75" alt="Double the Lovliness" />][33] [<img src="https://static.flickr.com/77/195672833_1e888c14ed_t.jpg" width="100" height="75" alt="Wow..." />][34] [<img src="https://static.flickr.com/59/195673050_e176f0a3bd_t.jpg" width="100" height="75" alt="Flash Battle" />][35] [<img src="https://static.flickr.com/59/195203260_49550bc4a4_s.jpg" />][36] [<img src="https://static.flickr.com/78/195203218_4dba66eeaf_t.jpg" />][37] [<img src="https://static.flickr.com/77/195203209_1b779db877_t.jpg" />][38] [<img src="https://static.flickr.com/59/195203195_8ba2b04169_t.jpg" />][39] [<img src="https://static.flickr.com/73/195203183_f841b41cf2_t.jpg" />][40] [<img src="https://static.flickr.com/68/195203148_df2895614f_s.jpg" />][41]
 
 [1]: http://www.hotpepper.com/
 [2]: http://waxy.org/
