--- a/web/content/posts/2006-08-09-a-bit-oversimplistic.mdx
+++ b/web/content/posts/2006-08-09-a-bit-oversimplistic.mdx
@@ -13,7 +13,7 @@ No. I could never move Avalonstar to [bryanveloso.com][1], that'd be... **boring
 
 So that brought me back to square one, what to do with it. So I thought, why not aggregate all of the stuff that makes me up, and I started to do that. I took feeds from Avalonstar and Live From the 101. But then I thought, well, anybody know knows who I am will already know about these two sites. Ultimately, it was scrapped. My next idea was, to have my "life's" story on there. Examples being: how I met Jenni, how I got three cats, etc. And I started to write too, a lot. But then I got to the part about high school and felt that I could write a whole autobiography, so I stopped there and never went back to it. Just the thought of writing grammatically incorrect paragraphs en masse really scared me. So it sat there.
 
-[<img src="http://static.flickr.com/63/211312712_2de5743cb6.jpg" width="154" height="500" alt="bryanveloso.com R3" />][2]
+[<img src="https://static.flickr.com/63/211312712_2de5743cb6.jpg" width="154" height="500" alt="bryanveloso.com R3" />][2]
 
 Which brings us back to yesterday, when I thought, "Boxes." My website should be about me, right? About who I am, and what makes me up. It's sort of like answering a question. Somebody types a name into their browser bar to see who they are. I thought I'd answer that question. Really simply by listing everything that I am. The big thing is that I wanted this done quickly, no overly complex design. I mean, this is for me. I'm not expecting any awards or acclimations for this site. If people want to know what's there, now they have their answer.
 
