--- a/web/content/posts/2008-09-02-gotta-catch-em-all.mdx
+++ b/web/content/posts/2008-09-02-gotta-catch-em-all.mdx
@@ -7,7 +7,7 @@ So you're going see a lot of posts today about Google's new browser, [Chrome][1]
 
 But we're not going to talk about that. No, you're not going to hear me go off about how it doesn't fit with the OS or how it fails at rendering rounded corners. No, we're going to talk about something much more substantial in the sprit of [talking about][3] [Google on Avalonstar][4]. Exhibit A please.
 
-[<img src="http://farm4.static.flickr.com/3231/2822957764_ae814404b6_o.png" width="620" height="300" alt="Coincidence?!" />][5]
+[<img src="https://farm4.static.flickr.com/3231/2822957764_ae814404b6_o.png" width="620" height="300" alt="Coincidence?!" />][5]
 
 Discuss.
 
