--- a/web/content/posts/2009-09-12-free-lunches.mdx
+++ b/web/content/posts/2009-09-12-free-lunches.mdx
@@ -3,7 +3,7 @@ title: "Free Lunches"
 date: 2009-09-12T20:45:00Z
 ---
 
-[<img src="http://farm3.static.flickr.com/2561/3913271330_1bd60675f7_o.png" width="515" height="752" alt="No Free Lunches" />][1]
+[<img src="https://farm3.static.flickr.com/2561/3913271330_1bd60675f7_o.png" width="515" height="752" alt="No Free Lunches" />][1]
 
 There was a day, way back when, when I got spambotted. But this wasn't just any spam, hell I don't even know if it was spam account but apparently said account retweeted the following:
 
