--- a/web/content/posts/2012-02-29-my-humanscale-m8.mdx
+++ b/web/content/posts/2012-02-29-my-humanscale-m8.mdx
@@ -5,7 +5,7 @@ date: 2012-02-29T23:50:00Z
 
 <div class="video-wrapper">
     <div class="embed-container">
-        <iframe src="http://player.vimeo.com/video/37719413" frameborder="0" webkitAllowFullScreen="webkitAllowFullScreen" mozallowfullscreen="mozallowfullscreen" allowFullScreen="allowFullScreen"></iframe>
+        <iframe src="https://player.vimeo.com/video/37719413" frameborder="0" webkitAllowFullScreen="webkitAllowFullScreen" mozallowfullscreen="mozallowfullscreen" allowFullScreen="allowFullScreen"></iframe>
     </div>
 </div>
 
